style.css
/*
  1. Use a more-intuitive box-sizing model.
*/
*, *::before, *::after {
  box-sizing: border-box;
}
/*
  2. Remove default margin
*/
* {
  margin: 0;
}
/*
  Typographic tweaks!
  3. Add accessible line-height
  4. Improve text rendering
*/
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
/*
  5. Improve media defaults
*/
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}
/*
  6. Remove built-in form typography styles
*/
input, button, textarea, select {
  font: inherit;
}
/*
  7. Avoid text overflows
*/
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}
/*
  8. Create a root stacking context
*/
#root, #__next {
  isolation: isolate;
}

@font-face {
  font-family: "RiformaLLTrialWeb-Heavy";
  src: url("fonts/RiformaLLTrialWeb-Heavy.woff2") format("woff2");
}

@font-face {
  font-family: "RiformaLLTrialWeb-Italic";
  src: url("fonts/RiformaLLTrialWeb-Italic.woff2") format("woff2");
}

@font-face {
  font-family: "RiformaLLTrialWeb-Light";
  src: url("fonts/RiformaLLTrialWeb-Light.woff2") format("woff2");
}

@font-face {
  font-family: "RiformaLLTrialWeb-BoldItalic";
  src: url("fonts/RiformaLLTrialWeb-BoldItalic.woff2") format("woff2");
}

@font-face {
  font-family: "RiformaLLTrialWeb-MediumItalic";
  src: url("fonts/RiformaLLTrialWeb-MediumItalic.woff2") format("woff2");
}

@font-face {
  font-family: "RiformaLLTrialWeb-Medium";
  src: url("fonts/RiformaLLTrialWeb-Medium.woff2") format("woff2");
}

@font-face {
  font-family: "RiformaLLTrialWeb-Bold";
  src: url("fonts/RiformaLLTrialWeb-Bold.woff2") format("woff2");
}

@font-face {
  font-family: "RiformaLLTrialWeb-Regular";
  src: url("fonts/RiformaLLTrialWeb-Regular.woff2") format("woff2");
}

@font-face {
  font-family: "RiformaLLTrialWeb-HeavyItalic";
  src: url("fonts/RiformaLLTrialWeb-HeavyItalic.woff2") format("woff2");
}

@font-face {
  font-family: "RiformaLLTrialWeb-LightItalic";
  src: url("fonts/RiformaLLTrialWeb-LightItalic.woff2") format("woff2");
}

body {
font-family: "RiformaLLTrialWeb-Regular";
}

#site_wrap {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100svh;
  overflow: auto;
}
#main_body {
  height: 200svh;
}
@media screen and (max-width: 1000px) {
  #main_body {
    height: 150svh;
  }
}

#main_body .logo {
  height: 100svh;
  position: relative;
  position: sticky;
  top: 0;
  z-index: 10;
}

#main_body .logo svg {
  width: 40vw;
  height: auto;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
}

@media screen and (max-width: 1000px) {
  #main_body .logo svg {
    width: 70vw;
  }
}

.pattern {
  position: absolute;
  top: -30%;
  left: -30%;
  width: 160%;
  height: 300%;
  z-index: 0;
  background-size: cover;
  background-position: center;

}

#pattern_grey {
  background-image: url(pattern-grey.png);
  animation: sway 80s linear infinite reverse;

}

#pattern_red {
  background-image: url(pattern-red.png);
  animation: sway 100s linear infinite;
    mix-blend-mode: multiply;
  
}

@keyframes sway {
  0% {
    transform: rotate(0deg);
  }
  33.33% {
    transform: translate(10%,10%) rotate(5deg);
  }
  66.66% {
    transform: translate(5%,-10%) rotate(0deg);
  }
  100% {
    transform: translate(-10%,-10%) rotate(-5deg);
  }
}

#text_section {
  background-color: #838569;
  padding: 50px 0px 250px;
  position: relative;
  z-index: 21;
}

@media screen and (max-width: 1000px) {
  #text_section {
    padding: 30px 0px 150px;
  }
}

#text_section .container {
  width: 80%;
  max-width:1270px;
  margin: 0 auto;
}

@media screen and (max-width: 1000px) {
  #text_section .container {
    width: 100%;
    padding: 0px 30px;
  }
}

#text_section .top {
  font-size: 38px;
  line-height: 45px;
}



@media screen and (max-width: 1000px) {
  #text_section .top {
    font-size: 20px;
    line-height: 24px;
  }
}

#text_section p {
  margin-bottom: 45px;
}

#text_section p:last-child {
  margin-bottom: 0;
}

#text_section .bottom {
  margin-top: 60px;
  display: grid;
  grid-template-columns: repeat(2,1fr);
  font-size: 24px;
  line-height: 28px;
}

@media screen and (max-width: 1000px) {
  #text_section .bottom {
    margin-top: 30px;
    font-size: 15px;
    line-height: 18px;
  }
}

#bottom_bar {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  z-index: 50;
  cursor: pointer;
}

#bottom_bar div:first-child {
  background: #38632F;
  height: 30px;
  cursor: pointer;
}

#bottom_bar div:last-child {
  background: #D06552;
  height: 30px;
  cursor: pointer;
}

a {
  color: inherit;
}

